fix card z-index issue

--- a/src/frontend/styles/components/cards.less
+++ b/src/frontend/styles/components/cards.less
@@ -16,6 +16,10 @@
 
   canvas {
     perspective: 50px;
+
+    &:hover {
+      z-index: 1;
+    }
   }
 }
 
